fixed excercise list alignment

--- a/client/src/components/workoutBuilder/exercise.module.scss
+++ b/client/src/components/workoutBuilder/exercise.module.scss
@@ -4,14 +4,15 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  padding: 0 10em;
   margin-bottom: 1em;
 }
 
 .nameContainer {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
+  width: 60%;
+  margin: 0 auto;
   align-items: flex-end;
 
   p {
@@ -29,6 +30,9 @@
 .tagContainer {
   display: flex;
   flex-direction: row;
+  width: 60%;
+  margin: 0 auto;
+
 
   p {
     font-size: 0.8rem;
